Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 with minimal overhead in your application. Server connections etc. all take
 place in django-gearman-jbox and don't unnecessarily clog your application code.</p>
 
-<p>This library is based in large part on Fred Wenzel's <a href="https://github.com/fwenzel/django-gearman">django-gearman</a> and Jozef Ševčík's <a href="https://github.com/CodeScaleInc/django-gearman-commands">django-gearman-commands</a>.</p>
+<p>This library is largely based on Fred Wenzel's <a href="https://github.com/fwenzel/django-gearman">django-gearman</a> and Jozef Ševčík's <a href="https://github.com/CodeScaleInc/django-gearman-commands">django-gearman-commands</a> librairies.</p>
 
 <ul>
 <li>
