Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Django-gearman-jbox by jbox-web</title>
+    <title>Django Gearman JBox by jbox-web</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>Django-gearman-jbox</h1>
+        <h1>Django Gearman JBox</h1>
         <h2></h2>
         <a href="https://github.com/jbox-web/django-gearman-jbox" class="button"><small>View project on</small>GitHub</a>
       </div>
@@ -37,7 +37,7 @@
 with minimal overhead in your application. Server connections etc. all take
 place in django-gearman-jbox and don't unnecessarily clog your application code.</p>
 
-<p>This library is largely based on Fred Wenzel's <a href="https://github.com/fwenzel/django-gearman">django-gearman</a> and Jozef Ševčík's <a href="https://github.com/CodeScaleInc/django-gearman-commands">django-gearman-commands</a> librairies.</p>
+<p>This library is based in large part on Fred Wenzel's <a href="https://github.com/fwenzel/django-gearman">django-gearman</a> and Jozef Ševčík's <a href="https://github.com/CodeScaleInc/django-gearman-commands">django-gearman-commands</a>.</p>
 
 <ul>
 <li>
@@ -446,6 +446,16 @@ the terms of any one of the MPL, the GPL or the LGPL.
       </div>
     </div>
 
-  
+            <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-36504891-3");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
+
   </body>
 </html>
