Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,42 +4,32 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Django Gearman JBox by jbox-web</title>
+
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/respond.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!--[if lt IE 8]>
-    <link rel="stylesheet" href="stylesheets/ie.css">
-    <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
   <body>
-      <div id="header">
-        <nav>
-          <li class="fork"><a href="https://github.com/jbox-web/django-gearman-jbox">View On GitHub</a></li>
-          <li class="downloads"><a href="https://github.com/jbox-web/django-gearman-jbox/zipball/master">ZIP</a></li>
-          <li class="downloads"><a href="https://github.com/jbox-web/django-gearman-jbox/tarball/master">TAR</a></li>
-          <li class="title">DOWNLOADS</li>
-        </nav>
-      </div><!-- end header -->
-
     <div class="wrapper">
+      <header>
+        <h1>Django Gearman JBox</h1>
+        <p></p>
 
+        <p class="view"><a href="https://github.com/jbox-web/django-gearman-jbox">View the Project on GitHub <small>jbox-web/django-gearman-jbox</small></a></p>
+
+
+        <ul>
+          <li><a href="https://github.com/jbox-web/django-gearman-jbox/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/jbox-web/django-gearman-jbox/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/jbox-web/django-gearman-jbox">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
       <section>
-        <div id="title">
-          <h1>Django Gearman JBox</h1>
-          <p></p>
-          <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/jbox-web">jbox-web</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
-        </div>
-
         <h1>
-<a name="django-gearman-jbox" class="anchor" href="#django-gearman-jbox"><span class="octicon octicon-link"></span></a>django-gearman-jbox</h1>
+<a id="django-gearman-jbox" class="anchor" href="#django-gearman-jbox" aria-hidden="true"><span class="octicon octicon-link"></span></a>django-gearman-jbox</h1>
 
 <p><em>django-gearman-jbox</em> is a convenience wrapper for the <a href="http://gearman.org">Gearman</a>
 <a href="http://github.com/samuel/python-gearman">Python Bindings</a>.</p>
@@ -55,7 +45,9 @@ place in django-gearman-jbox and don't unnecessarily clog your application code.
 <a href="https://github.com/fwenzel/django-gearman">django-gearman</a> for the 'decorator way' to create workers (very cool)</li>
 <li>
 <a href="https://github.com/CodeScaleInc/django-gearman-commands">django-gearman-commands</a> for the 'gearman_server_info' command (very nice)</li>
-</ul><p>But there are some modifications :</p>
+</ul>
+
+<p>But there are some modifications :</p>
 
 <p>Workers are now launched individually, so you have to pass 2 mandatory parameters to start the worker :</p>
 
@@ -63,7 +55,9 @@ place in django-gearman-jbox and don't unnecessarily clog your application code.
 <li>the Django App name where workers reside with the <code>-a</code> parameter</li>
 <li>the worker's name with <code>-n</code>
 </li>
-</ul><p>The <code>-q</code> parameter is still here and has the same function than in <a href="https://github.com/fwenzel/django-gearman">django-gearman</a>.</p>
+</ul>
+
+<p>The <code>-q</code> parameter is still here and has the same function than in <a href="https://github.com/fwenzel/django-gearman">django-gearman</a>.</p>
 
 <ul>
 <li>I removed the ability of lauching many wokers at once (<code>-w</code> parameter in <a href="https://github.com/fwenzel/django-gearman">django-gearman</a>).
@@ -71,8 +65,10 @@ I prefer having one process for each worker and Supervisord managing process. (s
 <li>I also added a signal handler to catch SIGTERM signals send by Supervisord and SIGINT when you worker is attached to the console.
 This gives you the possibility of executing code just before the worker terminates.
 (See <code>django_gearman_jbox\management\commands\gearman_worker.py</code>, line 116)</li>
-</ul><h2>
-<a name="installation" class="anchor" href="#installation"><span class="octicon octicon-link"></span></a>Installation</h2>
+</ul>
+
+<h2>
+<a id="installation" class="anchor" href="#installation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installation</h2>
 
 <p>It's the same for both the client and worker instances of your django project :</p>
 
@@ -89,10 +85,10 @@ GEARMAN_WORKER_SERVERS = ['127.0.0.1']
 </code></pre>
 
 <h2>
-<a name="workers" class="anchor" href="#workers"><span class="octicon octicon-link"></span></a>Workers</h2>
+<a id="workers" class="anchor" href="#workers" aria-hidden="true"><span class="octicon octicon-link"></span></a>Workers</h2>
 
 <h3>
-<a name="registering-workers" class="anchor" href="#registering-workers"><span class="octicon octicon-link"></span></a>Registering workers</h3>
+<a id="registering-workers" class="anchor" href="#registering-workers" aria-hidden="true"><span class="octicon octicon-link"></span></a>Registering workers</h3>
 
 <p>Create a directory <code>gearman_workers</code> in any of your django apps, and define as many
 workers as you like, one worker per file. Create an empty <code>__init__.py</code> so the directory will be
@@ -109,7 +105,7 @@ loaded as a package.</p>
 </code></pre>
 
 <h3>
-<a name="registering-tasks" class="anchor" href="#registering-tasks"><span class="octicon octicon-link"></span></a>Registering tasks</h3>
+<a id="registering-tasks" class="anchor" href="#registering-tasks" aria-hidden="true"><span class="octicon octicon-link"></span></a>Registering tasks</h3>
 
 <p>In the worker file, you can define as many tasks as functions as you like.
 The function must accept a single argument as passed by the caller and must
@@ -125,7 +121,7 @@ def my_task_function(foo):
 </code></pre>
 
 <h3>
-<a name="task-naming" class="anchor" href="#task-naming"><span class="octicon octicon-link"></span></a>Task naming</h3>
+<a id="task-naming" class="anchor" href="#task-naming" aria-hidden="true"><span class="octicon octicon-link"></span></a>Task naming</h3>
 
 <p>The tasks are given a default name of their import path, with the phrase
 <code>gearman_task</code> stripped out of them, for readability reasons. You can override
@@ -139,7 +135,7 @@ def my_task_function(foo):
 </code></pre>
 
 <h3>
-<a name="task-parameters" class="anchor" href="#task-parameters"><span class="octicon octicon-link"></span></a>Task parameters</h3>
+<a id="task-parameters" class="anchor" href="#task-parameters" aria-hidden="true"><span class="octicon octicon-link"></span></a>Task parameters</h3>
 
 <p>The gearman docs specify that the task function can accept only one parameter
 (usually refered to as the <code>data</code> parameter). Additionally, that parameter
@@ -157,7 +153,7 @@ client.submit_job('my-task-name', Decimal(1.0))
 </code></pre>
 
 <h3>
-<a name="tasks-with-more-than-one-parameter" class="anchor" href="#tasks-with-more-than-one-parameter"><span class="octicon octicon-link"></span></a>Tasks with more than one parameter</h3>
+<a id="tasks-with-more-than-one-parameter" class="anchor" href="#tasks-with-more-than-one-parameter" aria-hidden="true"><span class="octicon octicon-link"></span></a>Tasks with more than one parameter</h3>
 
 <p>You can pass as many arguments as you want, of whatever (serializable) type
 you like. Here's an example job definition :</p>
@@ -223,7 +219,7 @@ directly. Therefore, Gearman's bindings would receive <code>True</code> for
 list.</p>
 
 <h3>
-<a name="starting-a-worker" class="anchor" href="#starting-a-worker"><span class="octicon octicon-link"></span></a>Starting a worker</h3>
+<a id="starting-a-worker" class="anchor" href="#starting-a-worker" aria-hidden="true"><span class="octicon octicon-link"></span></a>Starting a worker</h3>
 
 <p>To start a worker, run <code>python manage.py gearman_worker -a &lt;django_app_name&gt; -n &lt;worker_name&gt;</code>. It will start
 serving all registered tasks for that worker.</p>
@@ -237,7 +233,7 @@ $ python manage.py gearman_worker -a django_app_name -n worker_bar
 <p>To spawn more than one worker see Supervisord configuration below.</p>
 
 <h3>
-<a name="task-queues" class="anchor" href="#task-queues"><span class="octicon octicon-link"></span></a>Task queues</h3>
+<a id="task-queues" class="anchor" href="#task-queues" aria-hidden="true"><span class="octicon octicon-link"></span></a>Task queues</h3>
 
 <p>Queues are a virtual abstraction layer built on top of gearman tasks. An
 easy way to describe it is the following example: Imagine you have a task
@@ -275,7 +271,7 @@ queue :</p>
 will load all tasks.</p>
 
 <h3>
-<a name="start-workers-with-supervisord" class="anchor" href="#start-workers-with-supervisord"><span class="octicon octicon-link"></span></a>Start workers with Supervisord</h3>
+<a id="start-workers-with-supervisord" class="anchor" href="#start-workers-with-supervisord" aria-hidden="true"><span class="octicon octicon-link"></span></a>Start workers with Supervisord</h3>
 
 <p>Supervisor - <a href="http://supervisord.org/">http://supervisord.org/</a> is babysitter for processes.
 It allows you to launch, restart and monitor running processes. In our case it will be workers.
@@ -327,7 +323,7 @@ supervisorctl restart bar:*
 </code></pre>
 
 <h3>
-<a name="execute-code-when-workers-die" class="anchor" href="#execute-code-when-workers-die"><span class="octicon octicon-link"></span></a>Execute code when workers die</h3>
+<a id="execute-code-when-workers-die" class="anchor" href="#execute-code-when-workers-die" aria-hidden="true"><span class="octicon octicon-link"></span></a>Execute code when workers die</h3>
 
 <p>Workers catch SIGTERM and SIGINT signals to kill themselves with a <code>sys.exit(0)</code> in a callback function.
 At this point in the code you can add your own function(s) which will be executed before the <code>sys.exit(0)</code>
@@ -336,7 +332,7 @@ See <code>django_gearman_jbox\management\commands\gearman_worker.py</code>, line
 <p>Note that this will impact all workers as it resides in the <code>gearman_worker.py</code> script which is global for all workers.</p>
 
 <h2>
-<a name="clients" class="anchor" href="#clients"><span class="octicon octicon-link"></span></a>Clients</h2>
+<a id="clients" class="anchor" href="#clients" aria-hidden="true"><span class="octicon octicon-link"></span></a>Clients</h2>
 
 <p>To make your workers work, you need a client app passing data to them.
 Create and instance of the <code>django_gearman_jbox.GearmanClient</code> class and execute submit_job with it :</p>
@@ -356,7 +352,7 @@ print "Result: '%s'" % res
 </code></pre>
 
 <h2>
-<a name="gearman-server-infos" class="anchor" href="#gearman-server-infos"><span class="octicon octicon-link"></span></a>Gearman Server Infos</h2>
+<a id="gearman-server-infos" class="anchor" href="#gearman-server-infos" aria-hidden="true"><span class="octicon octicon-link"></span></a>Gearman Server Infos</h2>
 
 <p><code>python manage.py gearman_server_info</code> outputs current status of Gearman servers.
 If you installed Prettytable dependency, here is how output looks like :</p>
@@ -408,7 +404,7 @@ If you installed Prettytable dependency, here is how output looks like :</p>
 </code></pre>
 
 <h2>
-<a name="licensing" class="anchor" href="#licensing"><span class="octicon octicon-link"></span></a>Licensing</h2>
+<a id="licensing" class="anchor" href="#licensing" aria-hidden="true"><span class="octicon octicon-link"></span></a>Licensing</h2>
 
 <p>This software is licensed under the <a href="http://www.mozilla.org/MPL/">Mozilla Tri-License</a>:</p>
 
@@ -453,9 +449,12 @@ the terms of any one of the MPL, the GPL or the LGPL.
 ***** END LICENSE BLOCK *****
 </code></pre>
       </section>
-
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/jbox-web">jbox-web</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+    <script src="javascripts/scale.fix.js"></script>
               <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
